more bugfixes adn also swagger
