# src/pages/api/page/[page]/field.ts
@@ -1,5 +1,21 @@
 // Next.js API route support: https://nextjs.org/docs/api-routes/introduction
 import type { NextApiRequest, NextApiResponse } from 'next'
+import pg from 'pg'
+
+declare global {
+    var postgres:pg.Client;
+}
+
+const postgres = new pg.Client({
+  user:process.env.DB_USER||"some_user",
+  host:process.env.DB_HOST||"db",
+  database:"dev",
+  password:process.env.DB_PASSWORD||"some_password",
+  port:5432
+})
+
+postgres.connect().then(e => {console.log("postgres connected")}).catch(e => {console.error(e)})
+globalThis.postgres = postgres
 
 export default async function handler(
   req: NextApiRequest,
@@ -11,7 +27,10 @@ export default async function handler(
         res.status(200).json((await globalThis.postgres.query(`select field.* from field where field.form_page = ${page}`)).rows satisfies {id:number, header:string, type:"text"|"email"|"checkbox"|"number", placeholder:string}[])
       break
       case "POST":
-        req.body = JSON.parse(req.body)
+        if (typeof req.body == "string") {
+          req.body = JSON.parse(req.body)
+        }
+  
   
         if (!(req.body != undefined &&
           typeof req.body.header == "string" &&
